--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Esmus - Esmus is a Educational Social Media Platform for University Students, Esmus going to revolunize education Platform"
+      content="Esmus - Esmus is a Educational Social Media Platform for University Students, Esmus going to revolunize education Platform,Esmus,Esmus"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
