--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Esmus - Esmus is a Educational Social Media Platform for University Students, Esmus going to revolunize education Platform,Esmus,Esmus"
+      content="Esmus - Esmus for University Students, Esmus going to revolunize education Platform,Esmus,Esmus"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Esmus - Social Media Platform in Education(Esmus)</title>
+    <title>Esmus - Education Platform( Esmus )</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
